syntax = "proto3";

package main;

option go_package = "./proto";

message DeliveryReq {
  int64 order_id = 1;//订单id
  string delivery_company = 2;//物流公司(配送方式)
  string delivery_sn = 3;//物流单号
  string operate_man = 4;
}

message DeliveryResp {
  string pong = 1;
}
message CloseOrderReq {
  repeated int64 Ids = 1;
  string Note = 2;
  string operate_man = 3;
}

message CloseOrderResp {
  string pong = 1;
}
message OrderDetailReq {
  int64 order_id = 1;
}

message OrderDetailResp {
  OrderListData data = 1;
}
message UpdateReceiverInfoReq {
  int64 order_id = 1;//订单id
  int32 status = 2; //订单状态：0->待付款；1->待发货；2->已发货；3->已完成；4->已关闭；5->无效订单
  string receiver_city = 34; //城市
  string receiver_detail_address = 35; //详细地址
  string receiver_name = 36; //收货人姓名
  string receiver_phone = 37; //收货人电话
  string receiver_post_code = 38; //收货人邮编
  string receiver_province = 39; //省份/直辖市
  string receiver_region = 40; //区
  string operate_man = 10;
}

message UpdateReceiverInfoResp {
  string pong = 1;
}
message UpdateMoneyInfoReq {
  int32 status = 1; //订单状态：0->待付款；1->待发货；2->已发货；3->已完成；4->已关闭；5->无效订单
  int64 order_id = 2;//订单id
  int64 freight_amount = 3; //运费金额
  int64 discount_amount = 4; //管理员后台调整订单使用的折扣金额
  string operate_man = 5;
}

message UpdateMoneyInfoResp {
  string pong = 1;
}
message UpdateNoteReq {
  int32 status = 1; //订单状态：0->待付款；1->待发货；2->已发货；3->已完成；4->已关闭；5->无效订单
  int64 order_id = 2;//订单id
  string note = 3;
  string operate_man = 4;
}

message UpdateNoteResp {
  string pong = 1;
}
message OrderAddReq {
  int64 id = 1; //订单id
  int64 member_id = 2; //会员id
  int64 coupon_id = 3; //优惠券id
  string order_sn = 4; //订单编号
  string member_username = 6; //用户帐号
  int64 total_amount = 7; //订单总金额
  int64 pay_amount = 8; //应付金额（实际支付金额）
  int64 freight_amount = 9; //运费金额
  int64 promotion_amount = 10; //促销优化金额（促销价、满减、阶梯价）
  int64 integration_amount = 11; //积分抵扣金额
  int64 coupon_amount = 12; //优惠券抵扣金额
  int64 discount_amount = 13; //管理员后台调整订单使用的折扣金额
  int32 pay_type = 14; //支付方式：0->未支付；1->支付宝；2->微信
  int32 source_type = 15; //订单来源：0->PC订单；1->app订单
  int32 status = 16; //订单状态：0->待付款；1->待发货；2->已发货；3->已完成；4->已关闭；5->无效订单
  int32 order_type = 17; //订单类型：0->正常订单；1->秒杀订单
  string delivery_company = 18; //物流公司(配送方式)
  string delivery_sn = 19; //物流单号
  int32 auto_confirm_day = 20; //自动确认时间（天）
  int32 integration = 21; //可以获得的积分
  int32 growth = 22; //可以活动的成长值
  string promotion_info = 23; //活动信息
  int32 bill_type = 24; //发票类型：0->不开发票；1->电子发票；2->纸质发票
  string bill_header = 25; //发票抬头
  string bill_content = 26; //发票内容
  string bill_receiver_phone = 27; //收票人电话
  string bill_receiver_email = 28; //收票人邮箱
  string receiver_name = 29; //收货人姓名
  string receiver_phone = 30; //收货人电话
  string receiver_post_code = 31; //收货人邮编
  string receiver_province = 32; //省份/直辖市
  string receiver_city = 33; //城市
  string receiver_region = 34; //区
  string receiver_detail_address = 35; //详细地址
  string note = 36; //订单备注
  int32 confirm_status = 37; //确认收货状态：0->未确认；1->已确认
  int32 delete_status = 38; //删除状态：0->未删除；1->已删除
  int32 use_integration = 39; //下单时使用的积分
  string payment_time = 40; //支付时间
  string delivery_time = 41; //发货时间
  string receive_time = 42; //确认收货时间
  string comment_time = 43; //评价时间
  string modify_time = 44; //修改时间
  repeated OrderItemData orderItemList = 45;
  int64       OrderId = 46;//订单创建后,返回
  repeated int64       CartItemIds = 47;
}

message OrderItemData {
  int64 id = 1; //
  int64 order_id = 2; //订单id
  string order_sn = 3; //订单编号
  int64 product_id = 4; //商品id
  string product_pic = 5; //商品图片
  string product_name = 6; //商品名称
  string product_brand = 7; //商品品牌
  string product_sn = 8; //货号
  int64 product_price = 9; //销售价格
  int32 product_quantity = 10; //购买数量
  int64 product_sku_id = 11; //商品sku编号
  string product_sku_code = 12; //商品sku条码
  int64 product_category_id = 13; //商品分类id
  string promotion_name = 14; //商品促销名称
  int64 promotion_amount = 15; //商品促销分解金额
  int64 coupon_amount = 16; //优惠券优惠分解金额
  int64 integration_amount = 17; //积分优惠分解金额
  int64 real_amount = 18; //该商品经过优惠后的分解金额
  int32 gift_integration = 19; //
  int32 gift_growth = 20; //
  string product_attr = 21; //商品销售属性:[{"key":"颜色","value":"颜色"},{"key":"容量","value":"4G"}]

}

message OrderAddResp {
  int64 Id = 1;//订单创建成功后,返回订单id
}

message OrderListReq {
  int64 current = 1;
  int64 page_size = 2;
  string order_sn = 3; //订单编号
  string member_username = 4; //用户帐号
  int32 pay_type = 5; //支付方式：0->未支付；1->支付宝；2->微信
  int32 source_type = 6; //订单来源：0->PC订单；1->app订单
  int32       status = 7;
  int32 order_type = 8; //订单类型：0->正常订单；1->秒杀订单
  int64 member_id = 9; //会员id
  string receiver_keyword = 10;
}

message OrderListData{
  int64 id = 1; //订单id
  int64 member_id = 2; //会员id
  int64 coupon_id = 3; //优惠券id
  string order_sn = 4; //订单编号
  string create_time = 5; //提交时间
  string member_username = 6; //用户帐号
  int64 total_amount = 7; //订单总金额
  int64 pay_amount = 8; //应付金额（实际支付金额）
  int64 freight_amount = 9; //运费金额
  int64 promotion_amount = 10; //促销优化金额（促销价、满减、阶梯价）
  int64 integration_amount = 11; //积分抵扣金额
  int64 coupon_amount = 12; //优惠券抵扣金额
  int64 discount_amount = 13; //管理员后台调整订单使用的折扣金额
  int32 pay_type = 14; //支付方式：0->未支付；1->支付宝；2->微信
  int32 source_type = 15; //订单来源：0->PC订单；1->app订单
  int32 status = 16; //订单状态：0->待付款；1->待发货；2->已发货；3->已完成；4->已关闭；5->无效订单
  int32 order_type = 17; //订单类型：0->正常订单；1->秒杀订单
  string delivery_company = 18; //物流公司(配送方式)
  string delivery_sn = 19; //物流单号
  int32 auto_confirm_day = 20; //自动确认时间（天）
  int32 integration = 21; //可以获得的积分
  int32 growth = 22; //可以活动的成长值
  string promotion_info = 23; //活动信息
  int32 bill_type = 24; //发票类型：0->不开发票；1->电子发票；2->纸质发票
  string bill_header = 25; //发票抬头
  string bill_content = 26; //发票内容
  string bill_receiver_phone = 27; //收票人电话
  string bill_receiver_email = 28; //收票人邮箱
  string receiver_name = 29; //收货人姓名
  string receiver_phone = 30; //收货人电话
  string receiver_post_code = 31; //收货人邮编
  string receiver_province = 32; //省份/直辖市
  string receiver_city = 33; //城市
  string receiver_region = 34; //区
  string receiver_detail_address = 35; //详细地址
  string note = 36; //订单备注
  int32 confirm_status = 37; //确认收货状态：0->未确认；1->已确认
  int32 delete_status = 38; //删除状态：0->未删除；1->已删除
  int32 use_integration = 39; //下单时使用的积分
  string payment_time = 40; //支付时间
  string delivery_time = 41; //发货时间
  string receive_time = 42; //确认收货时间
  string comment_time = 43; //评价时间
  string modify_time = 44; //修改时间
  repeated  OrderItemData itemListData = 45;
  repeated  OrderOperateHistoryData historyListData = 46;
}

message OrderOperateHistoryData {
  int64 id = 1; //
  int64 order_id = 2; //订单id
  string operate_man = 3; //操作人：用户；系统；后台管理员
  string create_time = 4; //创建时间
  int32 order_status = 5; //订单状态：0->待付款；1->待发货；2->已发货；3->已完成；4->已关闭；5->无效订单
  string note = 6; //备注

}
message OrderListResp {
  int64 total = 1;
  repeated  OrderListData list = 2;
}

message OrderUpdateReq {
  int64       id = 1;
  int32 status = 2; //订单状态：0->待付款；1->待发货；2->已发货；3->已完成；4->已关闭；5->无效订单
  string delivery_company = 3;//物流公司(配送方式)
  string delivery_sn = 43;//物流单号
  string      note = 5;
}

message OrderUpdateResp {
  string pong = 1;
}

message OrderDeleteByIdReq {
  repeated int64 Ids = 1;
}

message OrderDeleteReq {
  int64 MemberId = 1;
  int64 OrderId = 2;
}

message OrderDeleteResp {
  string pong = 1;
}

message OrderListByMemberIdReq {
  int64       Id = 1;
  int64 MemberId = 2;
}


message OrderListByMemberIdResp {
  int64 total = 1;
  OrderListData data = 2;
}

message OrderCancelReq {
  int64 MemberId = 1;
  int64 OrderId = 2;
}

message ReleaseSkuStockLockData {
  int64    ProductSkuId = 1;
  int32    ProductQuantity = 2;
}

message OrderCancelResp {
  int64 CouponId = 1;//优惠券id
  int32 Integration = 2;//积分
  repeated ReleaseSkuStockLockData data = 3;//释放库存
}

message OrderConfirmReq {
  int64 MemberId = 1;
  int64 OrderId = 2;
}

message OrderConfirmResp {
  string pong = 1;
}

message OrderRefundReq {
  int64 UserId = 1;
  int64 OrderId = 2;
}

message OrderRefundResp {
  string pong = 1;
}

message QueryOrderListReq {
  int64 MemberId = 1;
  int32 Status = 2;
  int64 current = 3;
  int64 pageSize = 4;
}
message UpdateOrderStatusByOutTradeNoReq {
  string OutTradeNo = 1;
  int64 OrderStatus = 2;
}

message UpdateOrderStatusByOutTradeNoResp {
  string pong = 1;
}
message QueryTimeOutOrderListReq {
  int32 minute = 1; //超时的时间

}
service OrderService {
  //pc
  //批量发货
  rpc Delivery(DeliveryReq) returns(DeliveryResp);
  //批量关闭订单
  rpc CloseOrder(CloseOrderReq) returns(CloseOrderResp);
  //获取订单详情：订单信息、商品信息、操作记录
  rpc OrderDetail(OrderDetailReq) returns(OrderDetailResp);
  //修改收货人信息
  rpc UpdateReceiverInfo(UpdateReceiverInfoReq) returns(UpdateReceiverInfoResp);
  //修改订单费用信息
  rpc UpdateMoneyInfo(UpdateMoneyInfoReq) returns(UpdateMoneyInfoResp);
  //备注订单
  rpc UpdateNote(UpdateNoteReq) returns(UpdateNoteResp);
  //查询订单
  rpc OrderList(OrderListReq) returns(OrderListResp);
  //批量删除订单
  rpc OrderDelete(OrderDeleteReq) returns(OrderDeleteResp);

  //app
  rpc OrderAdd(OrderAddReq) returns(OrderAddResp);
  rpc OrderUpdate(OrderUpdateReq) returns(OrderUpdateResp);
  rpc OrderListByMemberId(OrderListByMemberIdReq) returns(OrderListByMemberIdResp);
  rpc OrderCancel(OrderCancelReq) returns(OrderCancelResp);
  rpc OrderConfirm(OrderConfirmReq) returns(OrderConfirmResp);
  rpc OrderRefund(OrderRefundReq) returns(OrderRefundResp);
  rpc OrderDeleteById(OrderDeleteByIdReq) returns(OrderDeleteResp);
  //app端查询会员的订单列表信息
  rpc QueryOrderList(QueryOrderListReq) returns(OrderListResp);
  //更新订单状态
  rpc UpdateOrderStatusByOutTradeNo(UpdateOrderStatusByOutTradeNoReq) returns(UpdateOrderStatusByOutTradeNoResp);

  //查询超时、未支付的订单及订单详情
  rpc QueryTimeOutOrderList(QueryTimeOutOrderListReq) returns(OrderListResp);

}



