syntax = "proto3";

package main;

option go_package = "./proto";

// 添加会员信息
message RegisterReq {
  string nickname = 1; //昵称
  string mobile = 2; //手机号码
  int32 source = 3; //注册来源：0-PC，1-APP，2-小程序
  string password = 4; //密码
}

message RegisterResp {
  string token = 1;
}

// 删除会员信息
message DeleteMemberInfoReq {
  repeated int64 ids = 1;
}

message DeleteMemberInfoResp {
  string pong = 1;
}

// 更新会员信息
message UpdateMemberInfoReq {
  int64 id = 1; //主键ID
  string nickname = 2; //昵称
  string mobile = 3; //手机号码
  string avatar = 4; //头像
  string signature = 5; //个性签名
  int32 gender = 6; //性别：0-未知，1-男，2-女
  string birthday = 7; //生日
}

message UpdateMemberInfoResp {
  string pong = 1;
}

// 更新会员信息状态
message UpdateMemberInfoStatusReq {
  repeated int64 ids = 1; //主键ID
  int32 is_enabled = 22; //是否启用：0-禁用，1-启用
}

message UpdateMemberInfoStatusResp {
  string pong = 1;
}

// 查询会员信息详情
message QueryMemberInfoDetailReq {
  int64 member_id = 1; //会员ID
}

message QueryMemberInfoDetailResp {
  int64 id = 1; //主键ID
  int64 member_id = 2; //会员ID
  string wx_openid = 3; //微信openid
  int64 level_id = 4; //等级ID
  string nickname = 5; //昵称
  string mobile = 6; //手机号码
  int32 source = 7; //注册来源：0-PC，1-APP，2-小程序
  string password = 8; //密码
  string avatar = 9; //头像
  string signature = 10; //个性签名
  int32 gender = 11; //性别：0-未知，1-男，2-女
  string birthday = 12; //生日
  int32 growth_point = 13; //成长值
  int32 points = 14; //积分
  int32 total_points = 15; //累计获得积分
  float spend_amount = 16; //累计消费金额
  int32 order_count = 17; //订单数
  int32 coupon_count = 18; //优惠券数量
  int32 comment_count = 19; //评价数
  int32 return_count = 20; //退货数
  int32 lottery_times = 21; //剩余抽奖次数
  int32 first_login_status = 22; //1:未登录过,2:已登录过
  string last_login = 23; //最后登录
  int32 is_enabled = 24; //是否启用：0-禁用，1-启用
  string create_time = 25; //创建时间
  string update_time = 26; //更新时间

}

// 分页查询会员信息列表
message QueryMemberInfoListReq {
  int64 member_id = 1; //会员ID
  string nickname = 2; //昵称
  string mobile = 3; //手机号码
  int32 source = 4; //注册来源：0-PC，1-APP，2-小程序
  int32 is_enabled = 5; //是否启用：0-禁用，1-启用
  int32 page_num = 6; //第几页
  int32 page_size = 7; //每页的数量
}

message MemberInfoListData {
  int64 id = 1; //主键ID
  int64 member_id = 2; //会员ID
  string wx_openid = 3; //微信openid
  int64 level_id = 4; //等级ID
  string nickname = 5; //昵称
  string mobile = 6; //手机号码
  int32 source = 7; //注册来源：0-PC，1-APP，2-小程序
  string password = 8; //密码
  string avatar = 9; //头像
  string signature = 10; //个性签名
  int32 gender = 11; //性别：0-未知，1-男，2-女
  string birthday = 12; //生日
  int32 growth_point = 13; //成长值
  int32 points = 14; //积分
  int32 total_points = 15; //累计获得积分
  float spend_amount = 16; //累计消费金额
  int32 order_count = 17; //订单数
  int32 coupon_count = 18; //优惠券数量
  int32 comment_count = 19; //评价数
  int32 return_count = 20; //退货数
  int32 lottery_times = 21; //剩余抽奖次数
  int32 first_login_status = 22; //1:未登录过,2:已登录过
  string last_login = 23; //最后登录
  int32 is_enabled = 24; //是否启用：0-禁用，1-启用
  string create_time = 25; //创建时间
  string update_time = 26; //更新时间

}

message QueryMemberInfoListResp {
  int64 total = 1;
  repeated  MemberInfoListData list = 2;
}

message LoginReq {
  string      mobile = 1; //手机号码
  string      password = 2; //密码
  string      ip = 3; //登录IP
  int32      source = 4; //登录来源：0-PC，1-APP，2-小程序
}

message LoginResp {
  string Token = 1;
}

message UpdateMemberPointsReq {
  int64 member_id = 1; //会员ID
  int32 points = 2; //积分
}

message UpdateMemberPointsResp {
  string pong = 1;
}

message UpdateFirstLoginStatusReq {
  int64 member_id = 1; //会员ID
  int32 coupon_count = 18; //优惠券数量
}

// 会员信息
service MemberInfoService {
  // 注册会员信息
  rpc Register(RegisterReq) returns (RegisterResp){}
  // 删除会员信息
  rpc DeleteMemberInfo(DeleteMemberInfoReq) returns (DeleteMemberInfoResp){}
  // 更新会员信息
  rpc UpdateMemberInfo(UpdateMemberInfoReq) returns (UpdateMemberInfoResp){}
  // 更新会员信息状态
  rpc UpdateMemberInfoStatus(UpdateMemberInfoStatusReq) returns (UpdateMemberInfoStatusResp){}
  // 查询会员信息详情
  rpc QueryMemberInfoDetail(QueryMemberInfoDetailReq) returns (QueryMemberInfoDetailResp){}
  // 查询会员信息列表
  rpc QueryMemberInfoList(QueryMemberInfoListReq) returns (QueryMemberInfoListResp){}

  //会员登录
  rpc Login(LoginReq) returns(LoginResp);
  //更新会员积分
  rpc UpdateMemberPoints(UpdateMemberPointsReq) returns(UpdateMemberPointsResp);

  //更新会员首次登录状态
  rpc UpdateFirstLoginStatus(UpdateFirstLoginStatusReq) returns(UpdateMemberInfoResp);

}
